--- a/views/index.twig
+++ b/views/index.twig
@@ -2,9 +2,5 @@
 
 {% block content %}
 
-<section class="videos">
-	{% for video in options.videos %}
-	{% include '/partial/video.twig' with {file: video} %}
-	{% endfor %}
-</section>
+index
 {% endblock %}
