--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -1,27 +1,15 @@
-.videos {
-  display: grid;
-  height: 100vh;
-  width: 100%;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  align-items: stretch;
+.header {
+  @extend %bodycopy;
+  font-size: var(--ms-0);
+  margin-bottom: $padding * 2;
 }
-
-.card-video {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.header__copy {
+  max-width: 38em;
 }
-
-.video {
-  width: 100%;
-  transform-origin: top;
-  opacity: 0;
-  transition: $fast opacity;
-  &.canplay {
-    opacity: 1;
-  }
-  &.paused {
-    filter: invert(1);
-  }
+.footer {
+  @extend %bodycopy;
+  font-size: var(--ms--1);
+  display: flex;
+  padding-top: 6em;
+  justify-content: space-between;
 }
