--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html {{ site.language_attributes }} style="margin-top: 0 !important">
+<html {{ site.language_attributes }}>
 
 <head>
     <meta charset="{{ site.charset }}" />
@@ -9,14 +9,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{theme.link}}/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{theme.link}}/favicon-16x16.png">
 
-    <link rel="stylesheet" href="{{ site.theme.link }}/style.css?v=2.195" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ site.theme.link }}/style.css?v={{theme.version}}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="https://use.typekit.net/bxz5acc.css">
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="author" href="{{ site.theme.link }}/humans.txt" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
-
-    <link rel="stylesheet" href="https://use.typekit.net/uio6shm.css">
 
     {{function('wp_head')}}
