--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -21,8 +21,9 @@ html {
 body {
   background: black;
   font-weight: 300;
+  
   &.home {
-    background: $lightgray;
+    background-color: $lightgray;
     padding: $padding;
   }
 }
