--- a/views/base.twig
+++ b/views/base.twig
@@ -7,6 +7,7 @@
 {% endblock %}
 
 <body class="{{body_class}}" data-template="base.twig">
+	{% include "partial/toolbar.twig"%}
 	{% block header %}
 	{% endblock %}
 
