--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -1,15 +1,21 @@
 .header {
   @extend %bodycopy;
   font-size: var(--ms-0);
-  margin-bottom: $padding * 2;
+  margin-bottom: $padding;
+  padding-bottom: $padding;
+  border-bottom: 3px solid black;
+  border-image: $dashBorder;
 }
 .header__copy {
   max-width: 38em;
 }
 .footer {
   @extend %bodycopy;
+  border-top: 3px solid black;
+  border-image: $dashBorder;
   font-size: var(--ms--1);
   display: flex;
-  padding-top: 6em;
+  margin-top: calc(#{$padding} - 3px);
+  padding-top: $padding;
   justify-content: space-between;
 }
