--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ Theme Name: William Jacobson 2021
 Author: Max Kohler
 Author URI: http://maxkoehler.com/
 Description: Custom theme for William Jacobson. Includes the previous untitled Video Grid Website. Required plugins: Advanced Custom Fields Pro, Timber Library
-Version: 1.03
+Version: 0.31
 License: All rights reserved
 */
 
@@ -12,5 +12,6 @@ License: All rights reserved
 @import "global";
 @import "site";
 @import "home";
+@import "gallery";
 @import "video-grid";
 @import "mk-toolbar";
