--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -23,15 +23,10 @@
 }
 
 @mixin baselineGrid($lineHeight, $offset, $c) {
-	background-image: linear-gradient(
-		to bottom,
-		transparent 0px,
-		transparent #{$lineHeight},
-		$c calc(#{$lineHeight})
-	);
-	background-size: 100vw calc(#{$lineHeight} * 2);
-	background-repeat: repeat;
-	background-position: 0 $offset;
+  background-image: linear-gradient(to bottom, transparent 0px, transparent #{$lineHeight}, $c calc(#{$lineHeight}));
+  background-size: 100vw calc(#{$lineHeight} * 2);
+  background-repeat: repeat;
+  background-position: 0 $offset;
 }
 
 $fast: 100ms;
@@ -39,12 +34,19 @@ $lightgray: rgb(220, 220, 220);
 $black: rgb(14, 14, 14);
 $sans: "neue-haas-unica", sans-serif;
 $padding: var(--ms-0);
-$borderWidth: 2px;
-$dashBorder: repeating-linear-gradient(to right, black 0, black .85em, transparent .85em, transparent 1.25em) 100;
+$borderWidth: calc(var(--ms-0) * 0.1);
+$dashBorder: repeating-linear-gradient(
+    to right,
+    black 0,
+    black calc(var(--ms-0) * 0.85),
+    transparent calc(var(--ms-0) * 0.85),
+    transparent calc(var(--ms-0) * 1.5)
+  )
+  100;
 
 :root {
   --ratio: 1.2;
-  --ms-0: clamp(.9rem, calc(1.3vw + 0.2rem), 1.4rem);
+  --ms-0: clamp(0.9rem, calc(1.3vw + 0.2rem), 1.3rem);
   --ms--1: calc(var(--ms-0) / var(--ratio));
   --ms-1: calc(var(--ms-0) * var(--ratio));
 }
@@ -60,10 +62,11 @@ $dashBorder: repeating-linear-gradient(to right, black 0, black .85em, transpare
   @include bp(m) {
     hyphens: none;
   }
-  h1, h3 {
+  h1,
+  h3 {
     text-transform: uppercase;
-    letter-spacing: .02em;
-    margin-top: .6em;
+    letter-spacing: 0.02em;
+    margin-top: 0.65em;
     &:first-child {
       margin-top: 0;
     }
