--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -8,6 +8,9 @@
   font-family: inherit;
   font-weight: inherit;
   list-style: none;
+  &:focus-visible {
+    outline: 3px solid white;
+  }
 }
 
 table {
@@ -21,7 +24,7 @@ html {
 body {
   background: black;
   font-weight: 300;
-  
+
   &.home {
     background-color: $lightgray;
     padding: $padding;
@@ -39,5 +42,4 @@ a {
 
 :root {
   scrollbar-width: auto;
-  scrollbar-color: $black $lightgray;
 }
