--- a/sass/mk-toolbar.scss
+++ b/sass/mk-toolbar.scss
@@ -11,6 +11,7 @@
     opacity: 0;
     pointer-events: none;
     transition: 100ms;
+    z-index: 10000;
     &.active {
         opacity: 1;
     }
